cupt (0.1.4) unstable; urgency=low

  * cupt:
    - 'policy' subcommand:
      - Fixed old code referrings to 'gettext'.
    - Fixed skipping option-like arguments when searching for a command.
    - Implemented option '--show-reasons' for management actions.
  * Cupt:
    - System:
      - Resolver:
        - Fixed erroneous autovivification of package entries which are not
          installed when checking for sticks of candidate versions than can
          satisfy forward dependencies.
        - Fixed wrong sharing 'fake satisfied' entries between package entries
          in different solution branches.
        - Honor 'cupt::resolver::track-reasons' configuration option.
      - Worker:
        - APT mangles ':' chars in names of deb archives. Cupt doesn't do the
          same. So, to pick up debs downloaded by libapt, worker now generates
          symlinks from 'right' names to 'mangled' names whenever possible.
    - Config:
      - New configuration option 'cupt::resolver::track-reasons'.
  * doc:
    - cupt.1:
      - Renewed the list of supported APT configuration options.
      - Mentioned the way to send bug reports and IRC discussion channel.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Thu, 21 May 2009 11:49:18 +0300

cupt (0.1.3) unstable; urgency=low

  * debian/control:
    - Fixed misspelled Recommends 'liblocale-gettext-perl'.
    - Allow DM uploads.
  * cupt:
    - 'show' subcommand:
      - Show also source version if present.
    - 'changelog' subcommand:
      - Use source version for fetching remote changelogs if present. Fixes
        determining remote path for versions that had a binary-only rebuild(s).
    - 'policy' subcommand:
      - When called without arguments, print available Releases.
    - Exclude superfluous 'use Locale::gettext', Cupt::Core module do all
      needed manipulations to provide gettext. Thanks to
      David Broome <dbroome@gmail.com>. (Closes: #529167)
  * Cupt:
    - Cache: