@@ -75,7 +75,8 @@ my %command_handlers = (
 	'rdepends' => sub { show_package_relations('reverse') },
 	'policy' => \&policy,
 	'pkgnames' => \&pkgnames,
-	'changelog' => \&show_changelog,
+	'changelog' => sub { show_changelog_or_copyright('changelog') },
+	'copyright' => sub { show_changelog_or_copyright('copyright') },
 	'install' => sub { manage_packages('install') },
 	'remove' => sub { manage_packages('remove') },
 	'purge' => sub { manage_packages('purge') },
@@ -1050,7 +1051,8 @@ sub manage_packages ($) {
 	}
 }
 
-sub show_changelog {
+sub show_changelog_or_copyright {
+	my ($target) = @_;
 	# turn off info and relations parsing, we don't need it
 	$Cupt::Cache::BinaryVersion::o_no_parse_info_onlys = 1;
 	$Cupt::Cache::BinaryVersion::o_no_parse_relations = 1;
@@ -1071,17 +1073,24 @@ sub show_changelog {
 	my @versions = map { select_binary_package_version($_) } @ARGV;
 
 	foreach my $version (@versions) {
-		my $local_changelog_path = Cupt::Cache::get_path_of_debian_changelog($version);
+		my $local_target_path;
+		if ($target eq 'changelog') {
+			$local_target_path = Cupt::Cache::get_path_of_debian_changelog($version);
+		} else {
+			$local_target_path = Cupt::Cache::get_path_of_debian_copyright($version);
+		}
 
-		if (defined $local_changelog_path) {
+		if (defined $local_target_path) {
 			# there is a local changelog, display it
-			my $result = system("zcat $local_changelog_path | sensible-pager");
+			my $prepare_command = $target eq 'changelog' ? 'zcat' : 'cat';
+			my $result = system("$prepare_command $local_target_path | sensible-pager");
 			# return non-zero code in case of some error
 			return $result if $result;
 		} else {
 			my %base_uris_by_vendor = (
 				'Debian' => "http://packages.debian.org/changelogs/pool",
 				'Ubuntu' => "http://changelogs.ubuntu.com/changelogs/pool",
+				# yes, 'changelogs' even for copyrights :)
 			);
 
 			my @matched_avail_entries;
@@ -1098,7 +1107,7 @@ sub show_changelog {
 				}
 			}
 
-			my @changelog_uris;
+			my @target_uris;
 			foreach my $ref_matched_avail_entry (@matched_avail_entries) {
 				# all of above are only good guessings
 				my $version_string = $version->{source_version_string} // $version->{version_string};
@@ -1107,35 +1116,35 @@ sub show_changelog {
 						substr($source_name, 0, 4) : substr($source_name, 0, 1);
 
 				my $component = $ref_matched_avail_entry->{release}->{component};
-				my $remote_changelog_base_uri = $base_uris_by_vendor{$ref_matched_avail_entry->{release}->{vendor}};
-				my $uri_appendage = "$component/$short_prefix/$source_name/${source_name}_$version_string/changelog";
-				push @changelog_uris, "$remote_changelog_base_uri/$uri_appendage";
+				my $remote_target_base_uri = $base_uris_by_vendor{$ref_matched_avail_entry->{release}->{vendor}};
+				my $uri_appendage = "$component/$short_prefix/$source_name/${source_name}_$version_string/$target";
+				push @target_uris, "$remote_target_base_uri/$uri_appendage";
 			}
 
-			if (scalar @changelog_uris) {
+			if (scalar @target_uris) {
 				require Cupt::Download::Manager;
 				require Cupt::Download::Progresses::Console;
 
-				my (undef, $temp_changelog_path) = tempfile();
+				my (undef, $temp_target_path) = tempfile();
 				my $download_progress = new Cupt::Download::Progresses::Console;
 				my $download_result;
 				do {
 					my $download_manager = new Cupt::Download::Manager($config, $download_progress);
 					$download_result = $download_manager->download(
-							{ 'uris' => \@changelog_uris, 'filename' => $temp_changelog_path });
+							{ 'uris' => \@target_uris, 'filename' => $temp_target_path });
 				}; # make sure that download manager is already destroyed at this point
 
 				# fail and exit if it was something bad with downloading
 				mydie($download_result) if $download_result;
 
-				my $result = system("sensible-pager $temp_changelog_path");
+				my $result = system("sensible-pager $temp_target_path");
 				# remove the file
-				unlink $temp_changelog_path;
+				unlink $temp_target_path;
 				# return non-zero code in case of some error
 				return $result if $result;
 			} else {
-				mydie("no info where to acquire changelog for version '%s' of package '%s'",
-						$version->{version_string}, $version->{package_name});
+				mydie("no info where to acquire %s for version '%s' of package '%s'",
+						$target, $version->{version_string}, $version->{package_name});
 			}
 		}
 	}
